--- a/stopwatch/style.css
+++ b/stopwatch/style.css
@@ -8,4 +8,38 @@ body {
     background-color: #f0f0f0;
     font-family: "poppins", sans-serif;
     display: flex;
+    flex-direction: column;
+    justify-content: center;
+    min-height: 100vh;
+    overflow: hidden;
+    align-items: center;
 }
+
+#timer {
+    font-size: 7rem;
+    font-weight: 700;
+    text-shadow: 2px 2px #f8a5c2;
+    color: #f92672;
+    width: 600px;
+    text-align: center;
+    margin: 40px auto;
+}
+
+#btn {
+    display: flex;
+    justify-content: center;
+}
+
+button {
+    background-color: #f92672;
+    color: white;
+    border: none;
+    font-size: 2rem;
+    padding: 1.5rem 4rem;
+    margin: 1rem;
+    border-radius: 30px;
+    cursor: pointer;
+    box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.3);
+    transition: all 0.2s;
+}
+
