--- a/stopwatch/style.css
+++ b/stopwatch/style.css
@@ -15,7 +15,7 @@ body {
     align-items: center;
 }
 
-#timer {
+#displayTime {
     font-size: 7rem;
     font-weight: 700;
     text-shadow: 2px 2px #f8a5c2;
@@ -41,5 +41,27 @@ button {
     cursor: pointer;
     box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.3);
     transition: all 0.2s;
+}
+
+button:hover {
+    background-color: #f44583;
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0,5);
+}
+
+button [disabled]{
+    opacity: 0.5;
+    cursor: default;
+}
+
+@media (max-width: 800px){
+    #timer {
+        font-size: 4rem;
+        width: 350px;
+    }
+
+    button {
+        font-size: 1.5rem;
+        padding: 1rem 2rem;
+    }
 }
 
